@@ -14,6 +14,9 @@
 
 2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* message.el (message-fix-before-sending): Make a different warning
+	about NUL characters (bug#9270).
+
 	* gnus-sum.el (gnus-auto-select-subject): Allow specifying a function
 	from custom (bug#9260).
 
